Cambios a la letra

--- a/Propuesta 2/index.html
+++ b/Propuesta 2/index.html
@@ -50,7 +50,7 @@
 
            <section id="about">
         <h2>Sobre nosotros</h2>
-            <p>Somos una banda de... blablablablablablablablablablablablablablablablablablablablablablablablabla</p>
+            <p>Ludik es una banda originaria de la ciudad de Querétaro que celebra el pop, rock y disco de los años 70's y 80's. Nuestra esencia combina energía nostálgica, actitud rebelde y un espíritu lúdico que busca conectar generaciones a través de la música </p>
     </section>
 
       <section id="presentaciones">
