--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header class="hero">
         <video autoplay muted loop id="hero-video">
-            <source src="ludik.mp4" type="video/mp4">
+            <source src="https://drive.google.com/uc?export=download&id=1YLn1AjF6LNgaoT6YfE23vENQPYUJYR-M" type="video/mp4">
             Tu navegador no soporta videos HTML5.
         </video>
         <div class="video-controls">
