--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p>Para eventos, entrevistas o conciertos, contáctanos llenando el siguiente formulario o escríbenos a:</p>
             <p><a href="mailto:contacto@tubanda.com">contacto@tubanda.com</a></p>
 
-            <form class="contact-form" action="https://formspree.io/f/mnnzdkpg" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/myzpoyye" method="POST">
                 <input type="text" name="nombre" placeholder="Tu nombre" required>
                 <input type="email" name="email" placeholder="Tu correo electrónico" required>
                 <input type="text" name="evento" placeholder="Tipo de evento (boda, concierto, etc.)" required>
